--- a/src/Services/Catalog.Query/Catalog.Query.API/Catalog.Query.API.csproj
+++ b/src/Services/Catalog.Query/Catalog.Query.API/Catalog.Query.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>edad1163-72b3-4711-bc36-faa4eb95bcc5</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
