--- a/src/Services/Catalog.Query/Catalog.Query.API/Catalog.Query.API.csproj
+++ b/src/Services/Catalog.Query/Catalog.Query.API/Catalog.Query.API.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Validators\" />
     <Folder Include="Products\DeleteProduct\" />
-    <Folder Include="Products\GetProducts\" />
     <Folder Include="Products\UpdateProduct\" />
   </ItemGroup>
 
